--- a/src/app/club/pages-statics/contact/contact.component.html
+++ b/src/app/club/pages-statics/contact/contact.component.html
@@ -16,7 +16,7 @@
         <ul>
           <li><a href="inicio" >Inicio</a></li>
           <li><a href="qsomos">Quienes Somos</a></li>
-<!---->          <li><a href="planes">Planes</a></li>
+<!---->          <!--          <li><a href="planes">Planes</a></li>--> 
           <li><a href="contact" class="active">Contáctanos</a></li>
           <li><a href="sign-in">Ingresar</a></li>
         </ul>
