--- a/src/app/club/pages-statics/inicio/inicio.component.html
+++ b/src/app/club/pages-statics/inicio/inicio.component.html
@@ -16,7 +16,7 @@
         <ul>
           <li><a href="inicio" class="active">Inicio</a></li>
           <li><a href="qsomos">Quienes Somos</a></li>
-<!---->           <li><a href="planes">Planes</a></li>
+     <!--          <li><a href="planes">Planes</a></li>--> 
           <li><a href="contact">Contáctanos</a></li>
           <li><a href="sign-in">Ingresar</a></li>
         </ul>
