--- a/src/app/club/pages-statics/services/services.component.html
+++ b/src/app/club/pages-statics/services/services.component.html
@@ -16,7 +16,7 @@
           <li><a href="inicio" >Inicio</a></li>
           <li><a href="qsomos">Quienes Somos</a></li>
           <li><a href="service" class="active">Servicios</a></li>
-          <li><a href="planes">Planes</a></li>
+          <!--          <li><a href="planes">Planes</a></li>--> 
           <li><a href="contact">Contáctanos</a></li>
           <li><a href="sign-in">Ingresar</a></li>
         </ul>
