--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -5,7 +5,7 @@
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12">
           <!-- formulario de busqueda y -->
-          <form [formGroup]="search_form"> <div class="card-header"><h2>Detalles del Cliente</h2></div>
+          <form [formGroup]="search_form"> <div class="card-header"><h2>Emisión de poliza individual</h2></div>
             <div class="row g-0">
 
               <!-- primera columna -->
@@ -67,11 +67,11 @@
                       <div class="col-md-6 mb-4 pb-2">
                         <div class="form-outline">
                           <label class="form-label" for="form3Examplev2">Marca</label>
-                          <select formControlName="cmarca" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cmarca').errors } " (change)="getModeloData()">
-                            <option *ngFor="let marca of marcaList" value="{{ marca.id }}">{{ marca.value }}</option>
+                          <select formControlName="xmarca" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xmarca').errors } " (change)="getModeloData()">
+                            <option *ngFor="let marca of marcaList" value="{{ marca.value }}">{{ marca.value }}</option>
                           </select>
-                          <div *ngIf="submitted && search_form.get('cmarca').errors"  class="invalid-feedback">
-                            <div *ngIf="search_form.get('cmarca').errors.required"></div>
+                          <div *ngIf="submitted && search_form.get('xmarca').errors"  class="invalid-feedback">
+                            <div *ngIf="search_form.get('xmarca').errors.required"></div>
                         </div>
                         </div>
                       </div>
@@ -79,12 +79,12 @@
                       <div class="col-md-6 mb-4 pb-2">
                         <div class="form-outline">
                          <label class="form-label" for="form3Examplev4">Modelo</label>
-                         <select formControlName="cmodelo" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cmodelo').errors }" (change)="getVersionData()">
+                         <select formControlName="xmodelo" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xmodelo').errors }" (change)="getVersionData()">
                           <option></option>
-                          <option *ngFor="let modelo of modeloList" value="{{ modelo.cmodelo }}">{{ modelo.xmodelo }}</option>
+                          <option *ngFor="let modelo of modeloList" value="{{ modelo.value }}">{{ modelo.value }}</option>
                         </select>                       
-                         <div *ngIf="submitted && search_form.get('cmodelo').errors"  class="invalid-feedback">
-                           <div *ngIf="search_form.get('cmodelo').errors.required">Se requiere completar el campo</div>
+                         <div *ngIf="submitted && search_form.get('xmodelo').errors"  class="invalid-feedback">
+                           <div *ngIf="search_form.get('xmodelo').errors.required">Se requiere completar el campo</div>
                          </div>
                        </div>
                      </div>
@@ -157,11 +157,11 @@
                     <div class="col-md-5 mb-4 pb-2">
                       <div class="form-outline form-white">
                         <label class="form-label" for="form3Examplea7">Versión</label>
-                        <select formControlName="cversion" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cversion').errors }" >
-                          <option *ngFor="let version of versionList" value="{{ version.cversion }}">{{ version.xversion }}</option>
+                        <select formControlName="xversion" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xversion').errors }" >
+                          <option *ngFor="let version of versionList" value="{{ version.value }}">{{ version.value }}</option>
                         </select>                       
-                         <div *ngIf="submitted && search_form.get('cversion').errors"  class="invalid-feedback">
-                          <div *ngIf="search_form.get('cversion').errors.required"></div>
+                         <div *ngIf="submitted && search_form.get('xversion').errors"  class="invalid-feedback">
+                          <div *ngIf="search_form.get('xversion').errors.required"></div>
                       </div>
                       </div>
                     </div>
@@ -178,6 +178,19 @@
 
                    <div class="row">
 
+                    <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
+                      <div class="form-outline">
+                        <label class="form-label" for="form3Examplev5">Tipo de vehículo</label>
+                        <select formControlName="xtipo" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xtipo').errors }"  >
+                          <option></option>
+                          <option *ngFor="let tipo of tipoList" value="{{ tipo.value }}">{{ tipo.value }}</option>
+                        </select>                       
+                         <div *ngIf="submitted && search_form.get('xtipo').errors"  class="invalid-feedback">
+                          <div *ngIf="search_form.get('xtipo').errors.required">Se requiere completar el campo</div>
+                        </div>
+                      </div>
+                    </div>
+
                     <div class="col-md-6 mb-4 pb-2">
                       <div class="form-outline">                        
                         <label class="form-label" for="form3Examplev4">Plan de servicio</label>
@@ -191,22 +204,6 @@
                       </div>
                     </div>
 
-
-
-  
-                      <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
-                        <div class="form-outline">
-                          <label class="form-label" for="form3Examplev5">Tipo de vehículo</label>
-                          <select formControlName="xtipo" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xtipo').errors }"  >
-                            <option></option>
-                            <option *ngFor="let tipo of tipoList" value="{{ tipo.value }}">{{ tipo.value }}</option>
-                          </select>                       
-                           <div *ngIf="submitted && search_form.get('xtipo').errors"  class="invalid-feedback">
-                            <div *ngIf="search_form.get('xtipo').errors.required">Se requiere completar el campo</div>
-                          </div>
-                        </div>
-                      </div>
-                      
                   </div> 
 
               </div>
@@ -217,9 +214,9 @@
                         <div class="col-md-6 mb-4 pb-2">
                           <div class="form-outline">
                             <label class="form-label">Número del contacto</label>
-                            <input type="text" formControlName="xtelefono_prop" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xtelefono_prop').errors }"/>
-                            <div *ngIf="submitted && search_form.get('xtelefono_prop').errors"  class="invalid-feedback">
-                              <div *ngIf="search_form.get('xtelefono_prop').errors.required">Se requiere completar el campo</div>
+                            <input type="text" formControlName="xtelefono_emp" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xtelefono_emp').errors }"/>
+                            <div *ngIf="submitted && search_form.get('xtelefono_emp').errors"  class="invalid-feedback">
+                              <div *ngIf="search_form.get('xtelefono_emp').errors.required">Se requiere completar el campo</div>
                             </div>
                           </div>
                         </div>
@@ -292,9 +289,9 @@
                     <div class="row">
                       <div class="col-md-6 mb-4 pb-2">
                         <div class="form-outline">
-                          <label class="form-label" >Tipo de clase</label>
-                          <select formControlName="xuso" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xuso').errors } " (change)="getTipo()">
-                            <option *ngFor="let uso of usoList" value="{{ uso.value }}">{{ uso.value }}</option>
+                          <label class="form-label" >Tipo de uso</label>
+                          <select formControlName="xuso" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xuso').errors } ">
+                            <option *ngFor="let uso of usoList" value="{{ uso.value}}">{{ uso.value }}</option>
                           </select>                       
                            <div *ngIf="submitted && search_form.get('xuso').errors"  class="invalid-feedback">
                             <div *ngIf="search_form.get('xuso').errors.required">Se requiere completar el campo</div>
