cambios en la emision individual

--- a/src/app/club/pages-statics/inicio/inicio.component.html
+++ b/src/app/club/pages-statics/inicio/inicio.component.html
@@ -30,7 +30,7 @@
           <div class="col-lg-6 text-center">
             <h2 data-aos="fade-down">Bienvenidos a <span>Mundial Autos</span></h2>
             <p data-aos="fade-up">Experiencia, confianza y trayectoria en seguros.</p>
-            <a data-aos="fade-up" data-aos-delay="200" href="planes" class="btn-get-started">Conoce Nuestros Planes</a>
+            <!-- <a data-aos="fade-up" data-aos-delay="200" href="planes" class="btn-get-started">Conoce Nuestros Planes</a> -->
           </div>
         </div>
       </div>
