--- a/src/app/club/pages-statics/qsomos/qsomos.component.html
+++ b/src/app/club/pages-statics/qsomos/qsomos.component.html
@@ -15,7 +15,7 @@
         <ul>
           <li><a href="inicio" >Inicio</a></li>
           <li><a href="qsomos" class="active">Quienes Somos</a></li>
-<!---->           <li><a href="planes" >Planes</a></li>
+<!--          <li><a href="planes" >Planes</a></li>--> 
           <li><a href="contact" >Contáctanos</a></li>
           <li><a href="sign-in">Ingresar</a></li>
         </ul>
