--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -5,7 +5,7 @@
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12">
           <!-- formulario de busqueda y -->
-          <form [formGroup]="search_form"> <div class="card-header"><h2>Emisión de poliza individual</h2></div>
+          <form [formGroup]="search_form"> <div class="card-header"><h2>Emisión de Póliza Individual</h2></div>
             <div class="row g-0">
 
               <!-- primera columna -->
@@ -88,7 +88,7 @@
                          </div>
                        </div>
                      </div>
-                    </div>
+                  </div>
 
                   <div class="row">
 
@@ -117,6 +117,32 @@
                     </div>
 
                   </div>
+
+                
+                  <div class="row">
+
+                    <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
+                      <div class="form-outline">
+                        <label class="form-label" for="form3Examplev5">Fecha de emisión</label>
+                        <input type="date" formControlName="femision" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('femision').errors }"/>                       
+                        <div *ngIf="submitted && search_form.get('femision').errors"  class="invalid-feedback">
+                          <div *ngIf="search_form.get('femision').errors.required">Se requiere completar el campo</div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-md-6 mb-4 pb-2">
+                      <div class="form-outline">                        
+                        <label class="form-label" for="form3Examplev4">Fecha desde (Poliza)</label>
+                        <input type="date" formControlName="fdesde_pol" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('fdesde_pol').errors }"/>                       
+                         <div *ngIf="submitted && search_form.get('fdesde_pol').errors"  class="invalid-feedback">
+                          <div *ngIf="search_form.get('fdesde_pol').errors.required">Se requiere completar el campo</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+
               </div>
 
               <!-- segunda columna -->
@@ -127,34 +153,37 @@
                         <label class="form-label" for="form3Examplev2">Identificación</label>
                         <input type="text" formControlName="xrif_cliente" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xrif_cliente').errors }"/>
                         <div *ngIf="submitted && search_form.get('xrif_cliente').errors"  class="invalid-feedback">
-                          <div *ngIf="search_form.get('xrif_cliente').errors.required"></div>
+                          <div *ngIf="search_form.get('xrif_cliente').errors.required">Se requiere completar el campo</div>
                       </div>
                       </div>
                     </div>
+
                     <div class="col-md-6 mb-4 pb-2">
                       <div class="form-outline">
-                        <label class="form-label" for="form3Examplev3">Fecha de nacimiento</label>
-                        <input type="date" formControlName="fnac" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('fnac').errors }"/>
-                        <div *ngIf="submitted && search_form.get('fnac').errors"  class="invalid-feedback">
-                          <div *ngIf="search_form.get('fnac').errors.required">Se requiere completar el campo</div>
+                        <label class="form-label">Número del contacto</label>
+                        <input type="text" formControlName="xtelefono_emp" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xtelefono_emp').errors }"/>
+                        <div *ngIf="submitted && search_form.get('xtelefono_emp').errors"  class="invalid-feedback">
+                          <div *ngIf="search_form.get('xtelefono_emp').errors.required">Se requiere completar el campo</div>
                         </div>
                       </div>
                     </div>
-                  </div>
+
+
+
 
                   <div class="mb-4 pb-2">
                     <div class="form-outline form-white">
                       <label class="form-label" for="form3Examplea2">Dirección del cliente</label>
                       <input type="text" formControlName="xdireccionfiscal" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xdireccionfiscal').errors }"/>
                       <div *ngIf="submitted && search_form.get('xdireccionfiscal').errors"  class="invalid-feedback">
-                        <div *ngIf="search_form.get('xdireccionfiscal').errors.required"></div>
+                        <div *ngIf="search_form.get('xdireccionfiscal').errors.required">Se requiere completar el campo</div>
                     </div>
                     </div>
                   </div>
               
 
                   <div class="row">
-                    <div class="col-md-5 mb-4 pb-2">
+                    <div class="col-md-6 mb-4 pb-2">
                       <div class="form-outline form-white">
                         <label class="form-label" for="form3Examplea7">Versión</label>
                         <select formControlName="xversion" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xversion').errors }" >
@@ -165,12 +194,12 @@
                       </div>
                       </div>
                     </div>
-                    <div class="col-md-5 mb-4 pb-2">
+                    <div class="col-md-6 mb-4 pb-2">
                       <div class="form-outline form-white">
                         <label class="form-label" for="form3Examplea8">Serial de motor</label>
                         <input type="text" formControlName="xserialmotor" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xserialmotor').errors }"/>
                         <div *ngIf="submitted && search_form.get('xserialmotor').errors"  class="invalid-feedback">
-                          <div *ngIf="search_form.get('xserialmotor').errors.required"></div>
+                          <div *ngIf="search_form.get('xserialmotor').errors.required">Se requiere completar el campo</div>
                       </div>
                       </div>
                     </div>
@@ -198,9 +227,9 @@
                           <option></option>
                           <option *ngFor="let plan of planList" value="{{ plan.id }}">{{ plan.value }}</option>
                         </select>                       
-                       <!-- <div *ngIf="submitted && search_form.get('cplan').errors"  class="invalid-feedback">
+                       <div *ngIf="submitted && search_form.get('cplan').errors"  class="invalid-feedback">
                           <div *ngIf="search_form.get('cplan').errors.required">Se requiere completar el campo</div>
-                        </div> -->
+                        </div> 
                       </div>
                     </div>
 
@@ -208,23 +237,49 @@
                       
                   </div> 
 
+
+                  <div class="row">
+
+                    <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
+                      <div class="form-outline">
+                        <label class="form-label" for="form3Examplev5">Fecha hasta (Poliza)</label>
+                        <input type="date" formControlName="fhasta_pol" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('fhasta_pol').errors }"/>                       
+                        <div *ngIf="submitted && search_form.get('fhasta_pol').errors"  class="invalid-feedback">
+                          <div *ngIf="search_form.get('fhasta_pol').errors.required">Se requiere completar el campo</div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-md-6 mb-4 pb-2">
+                      <div class="form-outline">                        
+                        <label class="form-label" for="form3Examplev4">Fecha desde (Recibo)</label>
+                        <input type="date" formControlName="fdesde_rec" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('fdesde_rec').errors }"/>                       
+                         <div *ngIf="submitted && search_form.get('fdesde_rec').errors"  class="invalid-feedback">
+                          <div *ngIf="search_form.get('fdesde_rec').errors.required">Se requiere completar el campo</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
               </div>
+              </div>
+
 
              <!-- tercera columna -->
               <div class="col-lg-4">
-                 <div class="row">
-                        <div class="col-md-6 mb-4 pb-2">
-                          <div class="form-outline">
-                            <label class="form-label">Número del contacto</label>
-                            <input type="text" formControlName="xtelefono_emp" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xtelefono_emp').errors }"/>
-                            <div *ngIf="submitted && search_form.get('xtelefono_emp').errors"  class="invalid-feedback">
-                              <div *ngIf="search_form.get('xtelefono_emp').errors.required">Se requiere completar el campo</div>
-                            </div>
-                          </div>
-                        </div>
-    
-    
-                        <div class="col-md-6 mb-4 pb-2">
+               <div class="row">
+
+                  <div class="col-md-6 mb-4 pb-2">
+                    <div class="form-outline">
+                      <label class="form-label" for="form3Examplev3">Número alterno</label>
+                      <input type="text" formControlName="xtelefono_prop" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xtelefono_prop').errors }"/>
+                      <div *ngIf="submitted && search_form.get('xtelefono_prop').errors"  class="invalid-feedback">
+                        <div *ngIf="search_form.get('xtelefono_prop').errors.required">Se requiere completar el campo</div>
+                      </div>
+                    </div>
+                  </div>
+                
+                   <div class="col-md-6 mb-4 pb-2">
                           <div class="form-outline">
                             <label class="form-label" for="form3Examplev3">Correo electrónico</label>
                             <input type="email" formControlName="email" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('email').errors }"/>
@@ -232,8 +287,10 @@
                               <div *ngIf="search_form.get('email').errors.required">Se requiere completar el campo</div>
                             </div>
                           </div>
-                        </div>
-                 </div>
+                   </div>
+                 
+               </div>
+             
 
                   <div class="row">
 
@@ -270,7 +327,7 @@
                           <label class="form-label" for="form3Examplev2">Serial de carroceria</label>
                             <input type="text" formControlName="xserialcarroceria" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xserialcarroceria').errors }"/>
                           <div *ngIf="submitted && search_form.get('xserialcarroceria').errors"  class="invalid-feedback">
-                            <div *ngIf="search_form.get('xserialcarroceria').errors.required"></div>
+                            <div *ngIf="search_form.get('xserialcarroceria').errors.required">Se requiere completar el campo</div>
                         </div>
                         </div>
                       </div>
@@ -289,6 +346,7 @@
                     </div>
 
                     <div class="row">
+
                       <div class="col-md-6 mb-4 pb-2">
                         <div class="form-outline">
                           <label class="form-label" >Tipo de uso</label>
@@ -300,12 +358,36 @@
                           </div>-->
                         </div>
                       </div>
+
+                      <div class="col-md-6 mb-4 pb-2">
+                        <div class="form-outline">
+                          <label class="form-label" >Metodología de pago</label>
+                          <select formControlName="cmetodologiapago" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cmetodologiapago').errors } ">
+                            <option *ngFor="let metodologia of metodologiaList" value="{{ metodologia.id}}">{{ metodologia.value }}</option>
+                          </select>                       
+                            <div *ngIf="submitted && search_form.get('cmetodologiapago').errors"  class="invalid-feedback">
+                            <div *ngIf="search_form.get('cmetodologiapago').errors.required">Se requiere completar el campo</div> 
+                          </div>
+                        </div>
+                      </div>
                     </div>
 
+                    <div class="row">
+                      <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
+                        <div class="form-outline">
+                          <label class="form-label" for="form3Examplev5">Fecha hasta (Recibo)</label>
+                          <input type="date" formControlName="fhasta_rec" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('fhasta_rec').errors }"/>                       
+                          <div *ngIf="submitted && search_form.get('fhasta_rec').errors"  class="invalid-feedback">
+                            <div *ngIf="search_form.get('fhasta_rec').errors.required">Se requiere completar el campo</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
 
+                    
               </div>
-              
-             
+
+        
             <div class="button">
               <button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="onSubmit(search_form.value)">Subscribir </button>
             </div>
