--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -9,7 +9,7 @@
   </button>
   
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul *ngIf="auth" class="navbar-nav mr-auto" style="text-transform: capitalize;">
+    <ol *ngIf="auth" class="navbar-nav mr-auto" style="text-transform: capitalize;">
       <li class="nav-item dropdown" *ngFor="let group of groupList">
         
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: #fff;font-family: inherit;/* font-weight: bold; */font-size: 15px; text-transform: capitalize;; padding: 7px 12px 9px 12px;">
@@ -20,7 +20,7 @@
           <a class="dropdown-item" routerLink="{{ module.xruta }}" *ngFor="let module of group.modules" style="color: #4c4c4c;font-family: inherit;/* font-weight: bold; */font-size: 15px;text-transform: capitalize;;padding: 7px 12px 9px 12px;">{{ module.xmodulo | translate }}</a>
         </div>
       </li>
-    </ul>
+    </ol>
     <ul class="navbar-nav ml-auto">
 
         <li *ngIf="auth" class="nav-item">
