add changes emision

--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -91,7 +91,6 @@
                   </div>
 
                   <div class="row">
-
                     <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
                       <div class="form-outline">
                         <label class="form-label" for="form3Examplev5">Corredor</label>
@@ -118,9 +117,7 @@
 
                   </div>
 
-                
                   <div class="row">
-
                     <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
                       <div class="form-outline">
                         <label class="form-label" for="form3Examplev5">Fecha de emisión</label>
@@ -142,7 +139,27 @@
                     </div>
                   </div>
 
+                  <div class="row">
+                    <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
+                      <div class="form-outline">
+                        <label class="form-label" for="form3Examplev5">Suma asegurada</label>
+                        <input type="number" formControlName="msuma_aseg" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('msuma_aseg').errors }"/>                       
+                        <div *ngIf="submitted && search_form.get('msuma_aseg').errors"  class="invalid-feedback">
+                          <div *ngIf="search_form.get('msuma_aseg').errors.required">Se requiere completar el campo</div>
+                        </div>
+                      </div>
+                    </div>
 
+                    <div class="col-md-6 mb-4 pb-2">
+                      <div class="form-outline">                        
+                        <label class="form-label" for="form3Examplev4">Tarifa</label>
+                        <input type="number" formControlName="mtarifa" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('mtarifa').errors }"/>                       
+                         <div *ngIf="submitted && search_form.get('mtarifa').errors"  class="invalid-feedback">
+                          <div *ngIf="search_form.get('mtarifa').errors.required">Se requiere completar el campo</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
               </div>
 
               <!-- segunda columna -->
@@ -206,7 +223,6 @@
                   </div>
 
                    <div class="row">
-
                     <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
                       <div class="form-outline">
                         <label class="form-label" for="form3Examplev5">Tipo de vehículo</label>
@@ -237,9 +253,7 @@
                       
                   </div> 
 
-
                   <div class="row">
-
                     <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
                       <div class="form-outline">
                         <label class="form-label" for="form3Examplev5">Fecha hasta (Poliza)</label>
@@ -256,6 +270,27 @@
                         <input type="date" formControlName="fdesde_rec" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('fdesde_rec').errors }"/>                       
                          <div *ngIf="submitted && search_form.get('fdesde_rec').errors"  class="invalid-feedback">
                           <div *ngIf="search_form.get('fdesde_rec').errors.required">Se requiere completar el campo</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
+                      <div class="form-outline">
+                        <label class="form-label" for="form3Examplev5">Prima de casco</label>
+                        <input type="number" formControlName="mprima_casco" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('mprima_casco').errors }"/>                       
+                        <div *ngIf="submitted && search_form.get('mprima_casco').errors"  class="invalid-feedback">
+                          <div *ngIf="search_form.get('mprima_casco').errors.required">Se requiere completar el campo</div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-md-6 mb-4 pb-2">
+                      <div class="form-outline">                        
+                        <label class="form-label" for="form3Examplev4">Catastrofico</label>
+                        <input type="number" formControlName="mcatastrofico" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('mcatastrofico').errors }"/>                       
+                         <div *ngIf="submitted && search_form.get('mcatastrofico').errors"  class="invalid-feedback">
+                          <div *ngIf="search_form.get('mcatastrofico').errors.required">Se requiere completar el campo</div>
                         </div>
                       </div>
                     </div>
@@ -387,12 +422,14 @@
                     
               </div>
 
-        
+
+
+
             <div class="button">
               <button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="onSubmit(search_form.value)">Subscribir </button>
             </div>
             
-          </div>
+           </div>
         </form>
       </div>
     </div>
